workloads/istio-system/ignored/istio-system.ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: istio-system
  labels:
    app.kubernetes.io/name: istio
  annotations:
    flux.weave.works/ignore: "true"
