workloads/istio-system/ignored/ingress.cnp.yaml
---

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy

metadata:
  name: ingress
  namespace: istio-system
  annotations:
    flux.weave.works/ignore: "true"

spec:
  endpointSelector:
    matchLabels:
      istio: ingressgateway
  ingress:
    - fromEntities: ["all"]
